Added a report command with database

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-token=MTAxNjI0MzE2MjQyMDg3NTMwNA.GUcYk9.dHfsXsPQm9ymFJWpH9AOe_A6Gfn2Zhjw8XL0Ic
+token=MTAxNjI0MzE2MjQyMDg3NTMwNA.GXktDI.kSfl3ehJF395WpY5E3MkEyYMicVR6xi_4808ZA
 databaseToken=mongodb+srv://Shadow:RDnv2q0WRPasEw61@discordbot.wctbs.mongodb.net/?retryWrites=true&w=majority
