--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 
-=======
-token=
-databaseToken=
+token=MTAxNjI0MzE2MjQyMDg3NTMwNA.G6RhiK.DuEyNgNloYK8UQyJvN3mMyHUjF0lohQ8YZQOIs
+databaseToken=mongodb+srv://Shadow:RDnv2q0WRPasEw61@discordbot.wctbs.mongodb.net/?retryWrites=true&w=majority
 
