--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "test": "node ."
   },
-  
   "author": "Shad0w",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Efterskole/Discordv14.3"
   },
-
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.11.0",
@@ -22,6 +20,7 @@
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
     "laby.net": "^0.0.6",
+    "minecraft-server-util": "^5.3.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "node-fetch": "^2.6.7"
