--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.11.0",
+    "axios": "^0.27.2",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.37.2",
     "discord.js": "^14.5.0",
@@ -23,6 +24,8 @@
     "minecraft-server-util": "^5.3.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "node-labymod": "^2.1.3",
+    "validator": "^13.7.0"
   }
 }
